@@ -31,6 +31,7 @@ set(SCRIPT_FILES
     randompixelperrowmulticolor.js
     randomrow.js
     randomsingle.js
+    sinewave.js
     snowbubbles.js
     squares.js
     squaresfromcenter.js
