@@ -33,6 +33,7 @@ scripts.files += randompixelperrow.js
 scripts.files += randompixelperrowmulticolor.js
 scripts.files += randomrow.js
 scripts.files += randomsingle.js
+scripts.files += sinewave.js
 scripts.files += snowbubbles.js
 scripts.files += squares.js
 scripts.files += squaresfromcenter.js
