@@ -6,7 +6,8 @@ qlcplus (4.13.2) stable; urgency=low
   * UI/Show Manager: show step notes on the timeline (thanks to anarchid)
   * Web Access: fix grand master stopping running functions
   * Web Access: fix simple desk not resetting the current universe
-  * RGB scripts: fix Vertical Fall not allowing different colors when cloned
+  * RGB scripts: added 'Sine Wave' script
+  * RGB scripts: fix Vertical Fall not allowing changing color when cloned
   * New fixtures: GLP Impression X5, Ayrton Rivale Profile (thanks to Masatoshi Fujino)
   * New fixture: Eurolite LED Mini Strobe Cluster SMD 48 (thanks to Oliver)
   * New fixture: Ayra Compar Kit 3 (thanks to Robert)
